tests/frontend/fail/array/out_of_bounds_array_exp.act
contract A

constructor
interface constructor()

creates
  uint[2][2] x := [[0,0],[0,0]]

transition f
interface f()

storage

  x := [[1,2],[3,4]]
  x[0] := [10,20]
  x[0][1] := 42
